# pet_camera

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py  settings.py
src/camera/: __init__.py  camera.py  exceptions.py
